Filling it out.

--- a/error404.html
+++ b/error404.html
@@ -18,7 +18,8 @@
 				</div>
 			</div>
 			<div id='mainWrapper'>
-				This is Manic Studios, the label for all games created by <a href='http://manic0892.com'>Manic</a>.  The first game created under this label is <a href='http://40yog.manic-studios.com'>The 40 Year Old Game</a>, based on the podcast <a href='http://mikeschmidtcomedy.com/podcast'>The 40 Year Old Boy</a> by comedian Mike Schmidt.
+				Error 404.<br>
+				<a href='/'>Home</a>
 			</div>
 			<div id='footer'>
 				<ul>
