--- a/error404.html
+++ b/error404.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<link href='./styles.css' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Monda' rel='stylesheet' type='text/css'>
-		<title>Manic Studios</title>
+		<link href='http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
+		<title>Manic Studios - Error</title>
 	</head>
 	<body>
 		<div id='fullWrapper'>
