--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 			<div id='header'>
 				<div id='headerImgWrapperWrapper'>
 					<a href='/' id='headerImgWrapper' class='noBorder'>
-						<img src='./Manic_Studios_inverted_small.png' class='noBorder' />
+						<img src='/Manic_Studios_inverted_small.png' class='noBorder' />
 					</a>
 				</div>
 				<div id='headerLinks'>
-					<a href='/'>Home</a> / <a href='http://blog.manic-studios.com'>Blog</a>
+					<a href='/'>Home</a> - <a href='http://blog.manic-studios.com'>Blog</a> - <a href='http://40yog.manic-studios.com'>The 40YOG</a>
 				</div>
 			</div>
 			<div id='mainWrapper'>
