--- a/error404.html
+++ b/error404.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href='./styles.css' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
 		<title>Manic Studios - Error</title>
 	</head>
 	<body>
@@ -23,7 +23,7 @@
 			</div>
 			<div id='footer'>
 				<ul>
-					<li>© 2014 <a href='http://manic0892.com/'>Manic</a></li>
+					<li>&copy; 2014-2025 <a href='http://manic0892.com/'>Manic</a></li>
 					<li>Open source on <a href='http://github.com/Manic0892/manic-studios'>GitHub</a></li>
 				</ul>
 			</div>
