Updated copyright dates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 			<div id='footer'>
 				<ul>
-					<li>&copy; 2014-2025 <a href='http://manic0892.com/'>Manic</a></li>
+					<li>&copy; 2014, 2025 <a href='http://manic0892.com/'>Manic</a></li>
 					<li>Open source on <a href='http://github.com/Manic0892/manic-studios'>GitHub</a></li>
 				</ul>
 			</div>
