Fixed stylesheet path

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href='./styles.css' rel='stylesheet' type='text/css'>
+		<link href='/styles.css' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
 		<title>Manic Studios</title>
 	</head>
